--- a/quote.html
+++ b/quote.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+<h1 id = "heading">Random Quote Generator</h1>
+
     <div class = "container-fluid" id="quote-box">
         <div id="text" class = "quoteText">
         </div>
