Expand the page and body to 100% to stretch the background color Tweaked the size of quote box to have a consistent layout

--- a/quote.html
+++ b/quote.html
@@ -15,12 +15,16 @@
 <h1 id = "heading">Random Quote Generator</h1>
 
     <div class = "container-fluid" id="quote-box">
-        <div id="text" class = "quoteText">
+        <div class="content">
+            <div id="text" class = "quoteText">
+            </div>
+            <div id="author" class = "quoteText">
+            </div>
         </div>
-        <div id="author" class = "quoteText">
+        <div class="footer">
+            <button id="new-quote">New Quote</button>
+            <a href = "https://twitter.com/intent/tweet" id = "tweet-quote"><img src = "twitter-logo.jpg" id = "image"></a>
         </div>
-        <button id="new-quote">New Quote</button>
-        <a href = "https://twitter.com/intent/tweet" id = "tweet-quote"><img src = "twitter-logo.jpg" id = "image"></a>
     </div>
 
 
